fix: :bulb: Uncomment z-index property on header.
That doesn't seem to be the source of the navigation issue on firefox mobile.

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -5,7 +5,7 @@
 	width: 100%;
 	height: 5em;
 	min-height: 3em;
-	/* z-index: 10; */
+	z-index: 10;
 
 	padding: 0 3em;
 	background-color: var(--footer-header-bg-color);
